--- a/example/index.html
+++ b/example/index.html
@@ -14,6 +14,9 @@
     <li><a href="base">base</a></li>
     <li><a href="error">error</a></li>
     <li><a href="extend">extend</a></li>
+    <li><a href="interceptor">interceptor</a></li>
+    <li><a href="drag">drag</a></li>
+    <li><a href="config">config</a></li>
   </ul>
 </body>
 
