--- a/example/index.html
+++ b/example/index.html
@@ -19,6 +19,9 @@
     <li><a href="config">config</a></li>
     <li><a href="cancel">cancel</a></li>
     <li><a href="more">more</a></li>
+    <li><a href="xrsf">xrsf</a></li>
+    <li><a href="progress">progress</a></li>
+    <li><a href="authorization">authorization</a></li>
   </ul>
 </body>
 
