--- a/example/index.html
+++ b/example/index.html
@@ -23,6 +23,7 @@
     <li><a href="progress">progress</a></li>
     <li><a href="authorization">authorization</a></li>
     <li><a href="validateStatus">validateStatus</a></li>
+    <li><a href="paramSerializer">paramSerializer</a></li>
   </ul>
 </body>
 
