--- a/example/index.html
+++ b/example/index.html
@@ -24,6 +24,8 @@
     <li><a href="authorization">authorization</a></li>
     <li><a href="validateStatus">validateStatus</a></li>
     <li><a href="paramSerializer">paramSerializer</a></li>
+    <li><a href="baseURL">baseURL</a></li>
+    <li><a href="all_spread">all_spread</a></li>
   </ul>
 </body>
 
